# UniBot

./: .env  .gitignore  Bot.py  Config.toml  README.md  pyproject.toml
Plugins/: Events.py  __init__.py
Plugins/Commands/: About.py  Bound.py  Command.py  Help.py  List.py  Luck.py  Send.py  Server.py
Plugins/Expand/: Ai.py  Keywords.py  __init__.py
Resources/: Commands.json
Resources/Images/: Base.css  Base.html
Resources/Images/About/: About.css  About.html
Resources/Images/Bound/: Bound.css  Bound.html
Resources/Images/Help/: Help.css  Help.html
Resources/Images/List/: List.css  List.html
Resources/Images/Luck/: Luck.css  Luck.html
Resources/Images/Server/: Server.css  Server.html
Scripts/: Config.py  Globals.py  Network.py  Render.py  Rules.py  Utils.py
Scripts/Api/: Auth.py  Config.py  Limiter.py  Logs.py  Players.py  Plugins.py  Schemas.py  Servers.py  Status.py  Users.py  WebSocket.py  Ws.py  __init__.py
Scripts/Managers/: Data.py  Environment.py  Plugin.py  Server.py  User.py  Version.py  WebUi.py  __init__.py
