[project]
name = "Minecraft_UniBot"
version = "0.0.1"
description = "一款与 Minecraft 互通的 Nonebot2 机器人。"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "httpx>=0.28.1",
    "nonebot2[fastapi]>=2.2.1",
    "nonebot-adapter-onebot>=2.4.6",
    "psutil>=7.0.0",
    "nonebot-adapter-minecraft>=1.8.1",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-plugin-uninfo>=0.11.0",
]

[project.optional-dependencies]
image = [
    "html2pic>=0.2.2",
    "jinja2>=3.1.6",
]
ai = [
    "openai>=2.46.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
