[project]
name = "Minecraft_UniBot"
version = "v0.0.1"
description = "一款与 Minecraft 互通的 Nonebot2 机器人。"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "httpx>=0.28.1",
    "nonebot2[fastapi]>=2.2.1",
    "nonebot-adapter-minecraft>=1.8.1",
    "nonebot-plugin-alconna>=0.62.0",
    "nonebot-plugin-uninfo>=0.11.0",
]

[project.optional-dependencies]
image = [
    "html2pic>=0.2.2",
    "jinja2>=3.1.6",
    "pillow>=12.0.0",
]
ai = [
    "openai>=2.46.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.nonebot]
adapters = [
    { name = "Minecraft", module_name = "nonebot.adapters.minecraft" },
    # { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = ["Plugins"]
